fix alignment bug of logo

--- a/style.css
+++ b/style.css
@@ -99,9 +99,9 @@ p {
 }
 
 .nav_greedy_amigo_logo {
-    width: 28px;
+    width: 40px;
 
-    padding-top: 12px;
+    padding-top: 10px;
     padding-right: 7px;
 }
 
